--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.26 1997/09/22 18:07:19 grubba Exp $
+# $Id: configure.in,v 1.27 1997/10/03 10:57:07 grubba Exp $
 #
 
 prefix=$PWD
@@ -141,7 +141,6 @@ esac
 
 #############################################################################
 
-
 # Set some of the compiler flags.
 
 for ac_site_file in $CONFIG_SITE; do
@@ -154,19 +153,31 @@ rm ./config.cache ; CONFIG_SITE=x ./configure ; make])
   fi
 done
 
-if test $cppflags_is_set$ldflags_is_set = nono -a x${C_INCLUDE_PATH-} = x ; then
+#############################################################################
+
+## Search for some popular places where libraries may be hidden.
+
+#############################################################################
+
+if test $cppflags_is_set = no -a x${C_INCLUDE_PATH-} = x ; then
+  for d in /usr/local /usr/gnu /opt/gnu /sw/gnu /home/GNU /sw /usr/freeware
+  do
+    if test -d "$d/include" ; then
+      echo Adding $d/include to the include-path
+      CPPFLAGS="${CPPFLAGS} -I$d/include"
+    else
+      :
+    fi
+  done
+else
+  :
+fi
+if test $ldflags_is_set = no ; then
   for d in /usr/local /usr/gnu /opt/gnu /sw/gnu /home/GNU /sw /usr/freeware
   do
     if test -d "$d/lib" ; then
       echo Adding $d/lib to the library-path
       LDFLAGS="${LDFLAGS} -R$d/lib -L$d/lib"
-    else
-      :
-    fi
-
-    if test -d "$d/include" ; then
-      echo Adding $d/include to the include-path
-      CPPFLAGS="${CPPFLAGS} -I$d/include"
     else
       :
     fi
