Since gmp-2.0.2-ssh-2 uses autoconf and not cygnus-configure, the extra arguments to make can be removed.
Rev: Makefile.in:1.29

--- a/Makefile.in
+++ b/Makefile.in
@@ -20,7 +20,7 @@ exterm: force
 	@(cd extern;$(MAKE) all)
 
 gmp: force
-	-@(cd gmp;$(MAKE) CC="$(CC)" CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)" all)
+	-@(cd gmp;$(MAKE) all)
 
 gdbm: force
 	-@(cd gdbm;$(MAKE) all)
