Added extra test for obscure IRIX function.
Rev: configure.in:1.36

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.35 1997/10/05 19:41:55 grubba Exp $
+# $Id: configure.in,v 1.36 1997/10/07 01:22:02 grubba Exp $
 #
 
 prefix=$PWD
@@ -395,6 +395,11 @@ if test -d zlib/.; then
 int foo = (int)(Z_NO_COMPRESSION | Z_VERSION_ERROR);
       ],[
         AC_MSG_RESULT(yes)
+	if test x$pike_cv_sys_os = xIRIX ; then
+	  # The libz.so supplied with IRIX 6.3 needs this obscure symbol
+          # C++?
+          AC_CHECK_LIB(Csup, __vtbl__9type_info)
+        fi
 	AC_CHECK_LIB(z, compress, [], [
           echo Using supplied zlib anyway.
           ac_cv_header_zlib_h=no
