--- a/.gitattributes
+++ b/.gitattributes
@@ -150,6 +150,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/misc/ip-less_hosts.pike foreign_ident
 /server/modules/misc/ismap.pike foreign_ident
 /server/modules/misc/language.pike foreign_ident
+/server/modules/misc/upgrade_proxy.pike foreign_ident
 /server/modules/misc/userdb.pike foreign_ident
 /server/modules/misc/ypuserdb.pike foreign_ident
 /server/modules/proxies/connect.pike foreign_ident
