--- a/.gitattributes
+++ b/.gitattributes
@@ -140,6 +140,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/filters/htaccess.pike foreign_ident
 /server/modules/filters/redirect.pike foreign_ident
 /server/modules/filters/relay.pike foreign_ident
+/server/modules/graphics/business_graphics/business.pike foreign_ident
 /server/modules/graphics/business_graphics/the_pie_module_that_was_never_used_but_may_be_good_to_take_code_of_pie_drawing_from.pike foreign_ident
 /server/modules/graphics/graphic_text.pike foreign_ident
 /server/modules/graphics/pimage.pike foreign_ident
