--- a/extern/fast_cgi/Makefile.in
+++ b/extern/fast_cgi/Makefile.in
@@ -3,16 +3,19 @@
 #
 #  Open Market, Inc.
 #
-#  $Id: Makefile.in,v 1.2 1997/04/09 02:05:57 grubba Exp $
+#  $Id: Makefile.in,v 1.3 1997/10/14 23:10:04 grubba Exp $
 #
 
 @SET_MAKE@
+CC=@CC@
+CFLAGS=@CFLAGS@
+LDFLAGS=@LDFLAGS@
 
 SHELL=/bin/sh
 
 all:
-	(cd libfcgi; $(MAKE) all)
-	(cd cgi-fcgi; $(MAKE) all)
+	(cd libfcgi; $(MAKE) all "CC=$(CC)" "CFLAGS=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)")
+	(cd cgi-fcgi; $(MAKE) all "CC=$(CC)" "CFLAGS=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)")
 
 reconfig: clean
 	uname -rs >config.uname
@@ -22,7 +25,7 @@ clean:
 	rm -f *.a *.o core.* errs *~ \#* TAGS *.E a.out
 	rm -f *.a *.o core.* errs *~ \#* TAGS *.E a.out
 	rm -f config.cache config.log config.status config.uname
-	(cd libfcgi; $(MAKE) clean)
-	(cd cgi-fcgi; $(MAKE) clean)
+	(cd libfcgi; $(MAKE) clean "CC=$(CC)" "CFLAGS=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)")
+	(cd cgi-fcgi; $(MAKE) clean "CC=$(CC)" "CFLAGS=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)")
 
 # ----------------------------------------------------------------------------
