--- a/extern/fast_cgi/libfcgi/Makefile.in
+++ b/extern/fast_cgi/libfcgi/Makefile.in
@@ -3,7 +3,7 @@
 #
 #  Open Market, Inc.
 #
-#  $Id: Makefile.in,v 1.2 1997/10/05 03:33:10 grubba Exp $
+#  $Id: Makefile.in,v 1.3 1997/10/15 02:21:24 grubba Exp $
 #
 SRCDIR=@srcdir@
 prefix=@prefix@
@@ -12,7 +12,8 @@ VPATH=@srcdir@
 SHELL	= /bin/sh
 CC	= @CC@
 INCLUDEDIR  = -I$(SRCDIR)/../include -I../include -I. -I..
-CFLAGS	= @CFLAGS@ @CCDEFS@ @PROFILE@ $(INCLUDEDIR) 
+CFLAGSUP=
+CFLAGS	= $(CFLAGSUP) @CFLAGS@ @CCDEFS@ @PROFILE@ $(INCLUDEDIR) 
 RANLIB	= @RANLIB@
 LIBOBJS	= @LIBOBJS@
 
