--- a/.gitattributes
+++ b/.gitattributes
@@ -166,6 +166,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/scripting/fcgi.pike foreign_ident
 /server/modules/scripting/pikescript.pike foreign_ident
 /server/modules/tags/configtablist.pike foreign_ident
+/server/modules/tags/countdown.pike foreign_ident
 /server/modules/tags/flik.pike foreign_ident
 /server/modules/tags/htmlparse.pike foreign_ident
 /server/modules/tags/indirect_href.pike foreign_ident
