--- a/.gitattributes
+++ b/.gitattributes
@@ -172,6 +172,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/tags/indirect_href.pike foreign_ident
 /server/modules/tags/killframe.pike foreign_ident
 /server/modules/tags/lpctag.pike foreign_ident
+/server/modules/tags/obox.pike foreign_ident
 /server/modules/tags/sqltag.pike foreign_ident
 /server/modules/tags/tablify.pike foreign_ident
 /server/more_modules/bofh.pike foreign_ident
