Pass CFLAGSUP instead of CFLAGS on command line, because CFLAGS will keep overriding in all sub-makes due to MAKEFLAGS (in GNU make anyway).
Rev: extern/Makefile.in:1.16
Rev: extern/fast_cgi/Makefile.in:1.5

--- a/extern/Makefile.in
+++ b/extern/Makefile.in
@@ -32,7 +32,7 @@ none-localinstall:
 -install:
 
 fcgi: 
-	(cd fast_cgi; $(MAKE) "CFLAGS=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)" "CC=$(CC)")
+	(cd fast_cgi; $(MAKE) "CFLAGSUP=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)" "CC=$(CC)")
 	cp fast_cgi/cgi-fcgi/cgi-fcgi fcgi
 	@(strip fcgi || echo)
 
@@ -84,7 +84,7 @@ localinstall: fcgi roxen_hostname cgi
 
 clean: 
 	@rm -f roxen_hostname cgi shuffle fcgi *.o  core
-	@(cd fast_cgi; $(MAKE) clean "CFLAGS=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)" "CC=$(CC)")
+	@(cd fast_cgi; $(MAKE) clean "CFLAGSUP=$(CFLAGS)" "LDFLAGS=$(LDFLAGS)" "CC=$(CC)")
 
 spotless: clean
 	@rm -f config.* stamp-h
