--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ urw_itc_avant_garde-demi-r binary
 # changes to these files.
 /Makefile foreign_ident
 /configure.in foreign_ident
+/extern/acconfig.h foreign_ident
 /extern/configure.in foreign_ident
 /extern/fast_cgi/Makefile.in foreign_ident
 /extern/fast_cgi/README foreign_ident
