Improved passing of LDFLAGS to pike-subdir.
Rev: Makefile.in:1.35

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,12 +10,12 @@ INSTALL=@INSTALL@
 CC=@CC@
 CPPFLAGS=@CPPFLAGS@
 CFLAGS=@CFLAGS@
-LDFLAGS=@LDFLAGS@
+LDFLAGS=$(CFLAGS) @LDFLAGS@
 
 all:	@MAKE_GMP@ @MAKE_GDBM@ @MAKE_ZLIB@ pike extern
 
 pike: force
-	@(cd pike/src;$(MAKE) "prefix=$(prefix)" "CC=$(CC)" "LDFLAGS=$(LDFLAGS)")
+	@(cd pike/src;$(MAKE) "prefix=$(prefix)" "CC=$(CC)" "LDFLAGS=$(LDFLAGS) @LINKFORSHARED@")
 
 extern: force
 	@(cd extern;$(MAKE) "prefix=$(prefix)" "CC=$(CC)" "LDFLAGS=$(LDFLAGS)" all)
