--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.39 1997/10/26 23:50:32 grubba Exp $
+# $Id: configure.in,v 1.40 1997/11/06 18:26:33 grubba Exp $
 #
 
 prefix=$PWD
@@ -212,7 +212,7 @@ AC_DEFUN(AC_SYS_COMPILER_FLAG,
   CFLAGS="[$]OLD_CFLAGS"
   
   if test x"[$]roxen_cv_option_$2" = "xyes" ; then
-    OPTIMIZE="[$]OPTIMIZE $1"
+    $3="[$]$3 $1"
     AC_MSG_RESULT(yes)
   else
     AC_MSG_RESULT(no)
@@ -222,14 +222,14 @@ AC_DEFUN(AC_SYS_COMPILER_FLAG,
 AC_DEFUN(AC_SYS_CPU_COMPILER_FLAG,
 [
  if test "`uname -m 2>/dev/null`" = "$1" ; then
-    AC_SYS_COMPILER_FLAG($2,$3)
+    AC_SYS_COMPILER_FLAG($2,$3,$4)
  fi
 ])
 
 AC_DEFUN(AC_SYS_OS_COMPILER_FLAG,
 [
  if test "x$roxen_cv_sys_os" = "x$1" ; then
-    AC_SYS_COMPILER_FLAG($2,$3)
+    AC_SYS_COMPILER_FLAG($2,$3,$4)
  fi
 ])
 
@@ -239,52 +239,63 @@ OPTIMIZE=""
 if test $cflags_is_set = no; then
  if test "x${GCC-}" = xyes ; then
   WARN="-W -Wall -Wpointer-arith -Wno-unused -Wstrict-prototypes"
-  AC_SYS_COMPILER_FLAG(-O2,o2)
-# This option might cause gcc to build incorrect shared objects on AIX.
-#  AC_SYS_COMPILER_FLAG(-ffast-math,ffast_math)
-  AC_SYS_OS_COMPILER_FLAG(AIX,-mprototype,mprototype)
+  AC_SYS_COMPILER_FLAG(-O2,O2,OPTIMIZE)
+  AC_SYS_COMPILER_FLAG(-ffast-math,ffast_math,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(AIX,-mprototype,mprototype,WARN)
 ### Optimize for different SUN machines. If there is no working 'uname'
 ### no extra optimization will be done, but nothing should break either.
-  AC_SYS_CPU_COMPILER_FLAG(sun4c,-msparclite,sparclite)
-  AC_SYS_CPU_COMPILER_FLAG(sun4m,-mv8,microsparc)
-  AC_SYS_CPU_COMPILER_FLAG(sun4d,-msupersparc,supersparc)
-  AC_SYS_CPU_COMPILER_FLAG(sun4u,-msupersparc,ultrasparc)
+  AC_SYS_CPU_COMPILER_FLAG(sun4c,-msparclite,sparclite,OPTIMIZE)
+  AC_SYS_CPU_COMPILER_FLAG(sun4m,-mv8,microsparc,OPTIMIZE)
+  AC_SYS_CPU_COMPILER_FLAG(sun4d,-msupersparc,supersparc,OPTIMIZE)
+  AC_SYS_CPU_COMPILER_FLAG(sun4u,-msupersparc,ultrasparc,OPTIMIZE)
  else
 
 ### Non-gcc thingies. This should probably be enhanced...
 
+  # Solaris
+  AC_SYS_OS_COMPILER_FLAG(Solaris,-dalign,dalign,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(Solaris,-fast,fast,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(Solaris,-native,native,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(Solaris,-xdepend,xdepend,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(Solaris,-fd,fd,WARN)
+  AC_SYS_OS_COMPILER_FLAG(Solaris,-xtransition,xtransition,WARN)
+  AC_SYS_OS_COMPILER_FLAG(Solaris,-xs,xs,CFLAGS)
+  # Causes __STDC__ to be 1 which causes several headerfiles to behave
+  # differently.
+  # AC_SYS_OS_COMPILER_FLAG(Solaris,-Xc,Xc,WARN)
+
   # HP-UX
-  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Odataprefetch,plus_Odataprefetch)
-  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Ofailsafe,plus_Ofailsafe)
-  AC_SYS_OS_COMPILER_FLAG(HP-UX,+O3,plus_O3)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Odataprefetch,plus_Odataprefetch,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+Ofailsafe,plus_Ofailsafe,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(HP-UX,+O3,plus_O3,OPTIMIZE)
   if test x$ac_with_fullwarn = xyes ; then
     # Ignore warnings 530 and 414 if you turn this on.
-    AC_SYS_OS_COMPILER_FLAG(HP-UX,+w1,plus_w1)
+    AC_SYS_OS_COMPILER_FLAG(HP-UX,+w1,plus_w1,WARN)
   fi
 
   # OSF/1
-  AC_SYS_OS_COMPILER_FLAG(OSF1,-fast,fast)
-  AC_SYS_OS_COMPILER_FLAG(OSF1,-g3,g3)
-  AC_SYS_OS_COMPILER_FLAG(OSF1,-std1,std1)
-  AC_SYS_OS_COMPILER_FLAG(OSF1,-host,host)
-  AC_SYS_OS_COMPILER_FLAG(OSF1,-warnprotos,warnprotos)
+  AC_SYS_OS_COMPILER_FLAG(OSF1,-fast,fast,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(OSF1,-g3,g3,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(OSF1,-host,host,OPTIMIZE)
+  AC_SYS_OS_COMPILER_FLAG(OSF1,-std1,std1,WARN)
+  AC_SYS_OS_COMPILER_FLAG(OSF1,-warnprotos,warnprotos,WARN)
 
   # IRIX
   # sopt disabled since it takes too much time on interpret.c (>45min on an O²)
   # AC_SYS_OS_COMPILER_FLAG(IRIX,-sopt,sopt)
-  AC_SYS_OS_COMPILER_FLAG(IRIX,-n32,n32)
+  AC_SYS_OS_COMPILER_FLAG(IRIX,-n32,n32,CFLAGS)
   if test x$roxen_cv_option_n32 = xyes ; then
     echo Adding -n32 to LDFLAGS.
     LDFLAGS="$LDFLAGS -n32"
   fi
-  AC_SYS_OS_COMPILER_FLAG(IRIX,-g3,g3)
+  AC_SYS_OS_COMPILER_FLAG(IRIX,-g3,g3,OPTIMIZE)
   if test x$ac_with_fullwarn = xyes ; then
     # This warns about a lot of standard constructs, so it isn't enabled
     # by default.
-    AC_SYS_OS_COMPILER_FLAG(IRIX,-fullwarn,fullwarn)
+    AC_SYS_OS_COMPILER_FLAG(IRIX,-fullwarn,fullwarn,WARN)
   fi
   if test x$with_debug = xyes ; then
-    AC_SYS_OS_COMPILER_FLAG(IRIX,-trapuw,trapuw)
+    AC_SYS_OS_COMPILER_FLAG(IRIX,-trapuw,trapuw,WARN)
   fi
 
 dnl
@@ -296,24 +307,24 @@ dnl
 dnl ### Ok. This is for apcc...
 case "$CC" in
   *apcc)
-    AC_SYS_COMPILER_FLAG(-XO=5,apcc_opt)
-    AC_SYS_COMPILER_FLAG(-Xcallmod=2,apcc_opt_2)
+    AC_SYS_COMPILER_FLAG(-XO=5,apcc_opt,OPTIMIZE)
+    AC_SYS_COMPILER_FLAG(-Xcallmod=2,apcc_opt_2,OPTIMIZE)
   ;;
 esac
 
 
-  AC_SYS_CPU_COMPILER_FLAG(sun4m,-Xpipe=micro,microsparc)
-  AC_SYS_CPU_COMPILER_FLAG(sun4d,-Xpipe=super,supersparc)
-  AC_SYS_CPU_COMPILER_FLAG(sun4u,-Xpipe=super,ultrasparc)
+  AC_SYS_CPU_COMPILER_FLAG(sun4m,-Xpipe=micro,microsparc,OPTIMIZE)
+  AC_SYS_CPU_COMPILER_FLAG(sun4d,-Xpipe=super,supersparc,OPTIMIZE)
+  AC_SYS_CPU_COMPILER_FLAG(sun4u,-Xpipe=super,ultrasparc,OPTIMIZE)
 
   case "${CFLAGS-} $OPTIMIZE" in
      *-O*) ;;
      *+O*) ;;
      *-fast*) ;;
      *)
-      AC_SYS_COMPILER_FLAG(-O2,O2)
+      AC_SYS_COMPILER_FLAG(-O2,O2,OPTIMIZE)
       if test "x$pike_cv_option_O2" != "xyes"; then
-        AC_SYS_COMPILER_FLAG(-O,O)
+        AC_SYS_COMPILER_FLAG(-O,O,OPTIMIZE)
       fi
      ;;
   esac
@@ -326,7 +337,7 @@ if test "$GCC" = "yes"; then
 # Thanks to Michael Finken <finken@nentec.de> for pointing it out.
 #	/grubba 1997-10-07
 #   if test $cflags_is_set = no; then
-#     AC_SYS_COMPILER_FLAG(-pipe, pipe)
+#     AC_SYS_COMPILER_FLAG(-pipe, pipe, CFLAGS)
 #   fi
     :
 else
@@ -350,9 +361,55 @@ else
   fi
 fi
 
+AC_MSG_CHECKING(LINKFORSHARED)
+
+AC_CACHE_VAL(roxen_cv_sys_linkforshared,[
+# LINKFORSHARED are the flags passed to the $(CC) command that links
+# the pike executable -- this is only needed for a few systems
+if test -z "$LINKFORSHARED"
+then
+  if test "$GCC" = yes ; then
+    case $roxen_cv_sys_os in
+	AIX*)	LINKFORSHARED="-Wl,-bexpall -Wl,-brtl";;
+	hp*|HP*) LINKFORSHARED="-Wl,-E";;
+	Linux*) LINKFORSHARED="-rdynamic";;
+        GNU*) LINKFORSHARED="-rdynamic";;
+	next) LINKFORSHARED="-u libsys_s";;
+	SCO_SV*) LINKFORSHARED="-fpic -Wl,-Bexport";;
+    esac
+  else
+    case $roxen_cv_sys_os in
+	AIX*)	LINKFORSHARED="-Wl,-bexpall -Wl,-brtl";;
+	hp*|HP*) LINKFORSHARED="-Wl,-E";;
+	Linux*) LINKFORSHARED="-rdynamic";;
+        GNU*) LINKFORSHARED="-rdynamic";;
+	next) LINKFORSHARED="-u libsys_s";;
+	SCO_SV*) LINKFORSHARED="-Bdynamic -dy -Wl,-Bexport";;
+    esac
+  fi
+fi
+
+
+   OLD_CFLAGS="$CFLAGS"
+   CFLAGS="$CFLAGS $LINKFORSHARED"
+   AC_TRY_RUN([int main() { exit(0); }],
+ roxen_cv_sys_linkforshared="$LINKFORSHARED", roxen_cv_sys_linkforshared='')
+   CFLAGS="$OLD_CFLAGS"
+])
+
+LINKFORSHARED="$roxen_cv_sys_linkforshared"
+
+AC_MSG_RESULT($LINKFORSHARED)
+AC_SUBST(LINKFORSHARED)
+
+# Used to pass CFLAGS to Pike
+REALCFLAGS="$CFLAGS"
+AC_SUBST(REALCFLAGS)
+
+# Pass a joined CFLAGS to the other configure-scripts.
 CFLAGS="$CFLAGS $WARN $OPTIMIZE"
 
-export CC CFLAGS
+export CC CFLAGS REALCFLAGS WARN OPTIMIZE
 
 # GMP -- Gnu Multi-Precision library
 #------------------------------------
@@ -402,7 +459,7 @@ int foo = (int)(Z_NO_COMPRESSION | Z_VERSION_ERROR);
       ],[
         AC_MSG_RESULT(yes)
 	OLDLIBS="$LIBS"
-	if test x$pike_cv_sys_os = xIRIX ; then
+	if test x$roxen_cv_sys_os = xIRIX ; then
 	  # The libz.so supplied with IRIX 6.3 needs this obscure symbol
           # C++?
           AC_CHECK_LIB(Csup, __vtbl__9type_info)
