--- a/Makefile.in
+++ b/Makefile.in
@@ -9,7 +9,8 @@ INSTALL=@INSTALL@
 
 CC=@CC@
 CPPFLAGS=@CPPFLAGS@
-CFLAGS=@CFLAGS@
+CFLAGS=@REALCFLAGS@
+JOINEDCFLAGS=@CFLAGS@
 LDFLAGS=$(CFLAGS) @LDFLAGS@
 
 all:	@MAKE_GMP@ @MAKE_GDBM@ @MAKE_ZLIB@ pike extern
