--- a/extern/fast_cgi/configure.in
+++ b/extern/fast_cgi/configure.in
@@ -1,4 +1,4 @@
-dnl     $Id: configure.in,v 1.5 1997/06/01 16:22:11 grubba Exp $
+dnl     $Id: configure.in,v 1.6 1997/11/07 00:09:25 grubba Exp $
 dnl
 dnl     This file is an input file used by the GNU "autoconf" program to
 dnl     generate the file "configure", which is run during the build
@@ -21,7 +21,7 @@ AC_EGREP_HEADER(sun_len, sys/un.h, AC_DEFINE(HAVE_SOCKADDR_UN_SUN_LEN))
 
 AC_DEFINE(POSIX_SOURCE)
 
-AC_CHECK_HEADERS(arpa/inet.h)
+AC_CHECK_HEADERS(arpa/inet.h strings.h)
 
 #--------------------------------------------------------------------
 #  What extra libraries do we need for this platform?
