--- a/.gitattributes
+++ b/.gitattributes
@@ -177,6 +177,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/tags/obox.pike foreign_ident
 /server/modules/tags/sqltag.pike foreign_ident
 /server/modules/tags/tablify.pike foreign_ident
+/server/modules/tags/wizard_tag.pike foreign_ident
 /server/more_modules/bofh.pike foreign_ident
 /server/more_modules/clock.pike foreign_ident
 /server/more_modules/configure.pike foreign_ident
