--- a/.gitattributes
+++ b/.gitattributes
@@ -191,6 +191,7 @@ urw_itc_avant_garde-demi-r binary
 /server/protocols/http.pike foreign_ident
 /server/protocols/ssl3.pike foreign_ident
 /server/server_templates/bare.pike foreign_ident
+/server/server_templates/basic.pike foreign_ident
 /server/server_templates/ftp.pike foreign_ident
 /server/server_templates/ipp.pike foreign_ident
 /server/server_templates/proxy.pike foreign_ident
