--- a/.gitattributes
+++ b/.gitattributes
@@ -80,10 +80,12 @@ urw_itc_avant_garde-demi-r binary
 /server/config_actions/feature_list.pike foreign_ident
 /server/config_actions/flush.pike foreign_ident
 /server/config_actions/ftpstatus.pike foreign_ident
+/server/config_actions/generate_rsa.pike foreign_ident
 /server/config_actions/hostnames.pike foreign_ident
 /server/config_actions/linuxproc.pike foreign_ident
 /server/config_actions/listfonts.pike foreign_ident
 /server/config_actions/locks.pike foreign_ident
+/server/config_actions/make_csr.pike foreign_ident
 /server/config_actions/network_neighborhood.pike foreign_ident
 /server/config_actions/openfiles.pike foreign_ident
 /server/config_actions/openports.pike foreign_ident
